[gd_scene load_steps=4 format=2]

[ext_resource path="res://Pause.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Pixeled_5.tres" type="DynamicFont" id=2]
[ext_resource path="res://Menus/Options.tscn" type="PackedScene" id=3]

[node name="Pause" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 321.0
margin_bottom = 181.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.0
margin_top = 32.0
margin_right = 32.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/VBoxContainer"]
margin_right = 64.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "PAUSE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="Control/VBoxContainer"]
margin_top = 18.0
margin_right = 64.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 2 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="Control/VBoxContainer"]
margin_top = 42.0
margin_right = 64.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 2 )
text = "Options"

[node name="TitleScreen" type="Button" parent="Control/VBoxContainer"]
margin_top = 66.0
margin_right = 64.0
margin_bottom = 86.0
custom_fonts/font = ExtResource( 2 )
text = "Title Screen"

[node name="QuitButton" type="Button" parent="Control/VBoxContainer"]
margin_top = 90.0
margin_right = 64.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 2 )
text = "Quit"

[node name="Options" parent="." instance=ExtResource( 3 )]
[connection signal="pressed" from="Control/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/TitleScreen" to="." method="_on_TitleScreen_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]

[editable path="Options"]
